# excalidraw

./: .codespellrc  .cursorrules  .deepsource.toml  .depcheckrc.json  .dependency-cruiser.cjs  .dockerignore  .editorconfig  .env  .env.development  .env.example  .env.production  .env.production.example  .env.template  .env.test  .eslintignore  .eslintrc  .eslintrc.json  .firebaserc  .gitignore  .gitmodules  .gitpod.yml  .lintstagedrc.js  .npmrc  .nvmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  .prettierrc.json  .releaserc.json  .repoorbit-logs.json  .tool-versions  .vercelignore  .yarnrc  .yarnrc.yml  AGENTS.md  AI_FEATURES_PRODUCTION_READY.md  API_CONTRACT.md  APP_TSX_EXPLANATION.md  BINDING.md  (+171 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
tools/graph-layout-rag/: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  refilter_bibliography.py
tools/graph-layout-rag/data/: manifest.example.json  trusted_venue_checkpoint.json
tools/graph-layout-rag/docs/: quality-campaign-2026-06-23.md
tools/graph-layout-rag/scripts/: bench_dense_embed.py  bench_encode_device.py  build_contextual_index.py  gpu_build_ab_indexes.sh  gpu_dense_reembed.sh  gpu_env.sh  gpu_execute_local_llm_benchmark.sh  gpu_execute_remote.sh  gpu_local_llm_benchmark.sh  gpu_remote_bootstrap.sh  gpu_run_benchmark.sh  gpu_sync_from_remote.sh  gpu_sync_to_remote.sh
tools/graph-layout-rag/src/graph_layout_rag/: __init__.py  citation_store.py  cli.py  doc_vectors.py  docling_text.py  env.py  gemini_vision_text.py  manifest.py  paper_embed.py  paths.py  pdf_text.py
tools/graph-layout-rag/src/graph_layout_rag/catalog/: __init__.py  classify.py  taxonomy.py
tools/graph-layout-rag/src/graph_layout_rag/eval/: benchmark.py  commands.py  corpus_health.py  diagnostics.py  encode_device.py  experimental_index.py  gate.py  gold_cases.py  gold_validation.py  google_rerank.py  hardware.py  judge.py  metrics.py  pool_commands.py  pooling.py  qrels.py  related_eval.py  report.py  retrieval.py  splade_v3_encoder.py  worker.py
tools/graph-layout-rag/src/graph_layout_rag/harvest/: __init__.py  archive_fallback.py  arxiv.py  arxiv_bulk.py  log.py  (+31 more)
tools/graph-layout-rag/tests/: test_arxiv_bulk.py  test_bakeoff_arms.py  test_bibliography.py  test_bibliography_resume.py  test_canonical_ingest.py  test_catalog.py  test_chunk_profiles.py  test_chunk_spans.py  test_citation_directional.py  test_citation_rank.py  test_citation_store.py  test_citation_strategy.py  test_citations.py  test_cite_incoming.py  test_compare_extract.py  test_contextual.py  test_corpus_health.py  test_crossref.py  test_curated.py  test_discovery_concurrent.py  test_doc_vectors.py  test_docling_text.py  test_doi_resolver.py  test_doi_validate.py  test_download.py  test_embed.py  test_embed_cache.py  test_enrich.py  test_eval_gate.py  test_eval_hardware.py  test_eval_metrics.py  test_eval_strategies.py  test_experimental_index.py  test_gemini_vision_text.py  test_gold_validation.py  test_google_rerank.py  test_harvest_ledger.py  test_hybrid_bm25.py  test_index_paths.py  test_index_replacement.py  (+18 more)
tools/rag-common/: .gitignore  pyproject.toml
tools/rag-common/scripts/: gpu_dense_reembed.sh  gpu_env.sh  gpu_remote_bootstrap.sh  gpu_sync_from_remote.sh  gpu_sync_to_remote.sh
tools/rag-common/src/rag_common/: __init__.py  bench_dense_embed.py  config.py  embed.py  embed_profiles.toml  env.py  gemini_embed.py  gemini_rate_limit.py  local_embed.py  local_llm.py  mlx_embed.py  openai_embed.py  profiles.py  rerank.py  resolve.py
tools/rag-common/tests/: test_embed.py  test_env.py  test_gemini_embed.py  test_gemini_rate_limit.py  test_local_embed.py  test_local_llm.py  test_mlx_embed.py  test_openai_progress.py  test_profiles.py  test_rerank.py
tools/rag-literature-rag/: .env.example  .gitignore  ARCHITECTURE.md  README.md  embed_profiles.toml  pyproject.toml  refilter_bibliography.py
tools/rag-literature-rag/docs/: embedding-patterns-agent-loop-2026-06-19.md  eval-findings.md  experiment-2026-06-20-repaired-baseline.md  quality-campaign-2026-06-18.md  quality-campaign-2026-06-22.md
tools/rag-literature-rag/scripts/: audit_chunk_provenance.py  build_contextual_index.py  gpu_dense_reembed.sh  gpu_raptor_smoke.sh  gpu_sync_from_remote.sh  gpu_sync_to_remote.sh  synth_separation_report.py  validate_rubric_fix.py
tools/rag-literature-rag/src/rag_literature_rag/: citation_store.py  cli.py  doc_vectors.py  docling_text.py  env.py  gemini_vision_text.py  manifest.py  paths.py  pdf_text.py
tools/rag-literature-rag/tests/: test_arxiv_bulk.py  test_bakeoff_arms.py  test_bibliography.py  test_bibliography_resume.py  test_build_contextual_index.py  test_canonical_ingest.py  test_catalog.py  test_chunk_profiles.py  test_chunk_spans.py  test_citation_directional.py  test_citation_rank.py  test_citation_store.py  test_citation_strategy.py  test_citations.py  test_cite_incoming.py  test_compare_extract.py  test_contextual.py  test_corpus_health.py  test_crossref.py  test_curated.py  test_discovery_concurrent.py  test_doc_summary.py  test_doc_vectors.py  test_docling_text.py  test_doi_resolver.py  test_doi_validate.py  test_download.py  test_embed.py  test_enrich.py  test_eval_hardware.py  test_eval_metrics.py  test_eval_strategies.py  test_experimental_index.py  test_fallback_repair.py  test_gemini_vision_text.py  test_gold_synth.py  test_gold_validation.py  test_google_rerank.py  test_harvest_ledger.py  test_hybrid_bm25.py  (+21 more)
tools/repo-rag/: .env.example  .gitignore  README.md  pyproject.toml
tools/repo-rag/docs/: SOTA-2026-code-retrieval.md
tools/repo-rag/eval/: queries.json
tools/repo-rag/scripts/: gpu_dense_reembed.sh  gpu_sync_from_remote.sh  gpu_sync_to_remote.sh
tools/repo-rag/src/repo_rag/: __init__.py  cli.py  context.py  env.py  eval.py  graph.py  logging_config.py  mcp_server.py  paths.py  watch.py
tools/repo-rag/tests/: test_bm25.py  test_chunk.py  test_contextualize.py  test_embed.py  test_env.py  test_eval.py  test_graph.py  test_harvest.py  test_hybrid.py  test_logging.py  test_watch.py
(+2567 files in other folders)
