[project]
name = "graph-layout-rag"
version = "0.1.0"
description = "Local RAG corpus for graph drawing / layout theory research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "click>=8.1.0",
  "httpx>=0.27.0",
  "lancedb>=0.15.0",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "pymupdf>=1.24.0",
  "rag-common[gemini,mlx]",
  "tiktoken>=0.7.0",
]

[tool.uv.sources]
rag-common = { path = "../rag-common", editable = true }

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
mlx = ["rag-common[mlx]"]

[project.scripts]
graph-layout-rag = "graph_layout_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_layout_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
